--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -7,7 +7,8 @@ nav {
     z-index: 1000;
     top: 0;
     left: 0;
-    right: 0;
+    right: 0; 
+    background-color: var(--color-bg);
 }
 
 .nav-links-container {
